--- a/ScandiHome/ScandiHome/ScandiHome.csproj
+++ b/ScandiHome/ScandiHome/ScandiHome.csproj
@@ -82,6 +82,12 @@
     <Compile Include="EPR\List\frmLST_Product_Input.Designer.cs">
       <DependentUpon>frmLST_Product_Input.cs</DependentUpon>
     </Compile>
+    <Compile Include="Settings\frmST_Quota.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Settings\frmST_Quota.Designer.cs">
+      <DependentUpon>frmST_Quota.cs</DependentUpon>
+    </Compile>
     <Compile Include="System\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EPR\List\frmLST_Product_Input.resx">
       <DependentUpon>frmLST_Product_Input.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Settings\frmST_Quota.resx">
+      <DependentUpon>frmST_Quota.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="System\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
