--- a/API_ScandiHome/API_ScandiHome/AppConfig.INI
+++ b/API_ScandiHome/API_ScandiHome/AppConfig.INI
@@ -1,6 +1,6 @@
 ﻿
 [Connection]
-Instance=.
-DBConnection=aaaa
+Instance=.\SQL2019
+DBConnection=ScandiHome
 User=sa
-Pass=asdasdasdas
+Pass=12345678x@X
