--- a/API_ScandiHome/API_ScandiHome/AppConfig.INI
+++ b/API_ScandiHome/API_ScandiHome/AppConfig.INI
@@ -1,6 +1,6 @@
 ﻿
 [Connection]
-Instance=.\SQL2019
-DBConnection=ScandiHome
+Instance=.
+DBConnection=ScandiHome_20221004
 User=sa
 Pass=12345678x@X
