--- a/API_ScandiHome/API_ScandiHome/AppConfig.INI
+++ b/API_ScandiHome/API_ScandiHome/AppConfig.INI
@@ -1,6 +1,6 @@
 ﻿
 [Connection]
-Instance=.
-DBConnection=ScandiHome_20221004
+Instance=.\SQL2019
+DBConnection=ScandiHome_20221005
 User=sa
 Pass=12345678x@X
