--- a/ScandiHome/ScandiHome/ScandiHome.csproj
+++ b/ScandiHome/ScandiHome/ScandiHome.csproj
@@ -47,6 +47,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.Data.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Printing.v19.2.Core, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -74,7 +77,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account.cs" />
+    <Compile Include="DTO\Account.cs" />
+    <Compile Include="DTO\GetProductDetail.cs" />
+    <Compile Include="DTO\RequestModel.cs" />
+    <Compile Include="DTO\ResponseModel.cs" />
+    <Compile Include="EPR\ENT\frmENT_Order.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EPR\ENT\frmENT_Order.Designer.cs">
+      <DependentUpon>frmENT_Order.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EPR\frmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EPR\frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
     <Compile Include="EPR\List\frmLST_Product.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,27 +105,9 @@
     <Compile Include="EPR\List\frmLST_Product_Input.Designer.cs">
       <DependentUpon>frmLST_Product_Input.cs</DependentUpon>
     </Compile>
-    <Compile Include="HttpHelper.cs" />
-    <Compile Include="RequestModel.cs" />
-    <Compile Include="ResponseModel.cs" />
-    <Compile Include="System\frmLogin.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="System\frmLogin.Designer.cs">
-      <DependentUpon>frmLogin.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmMain.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmMain.Designer.cs">
-      <DependentUpon>frmMain.cs</DependentUpon>
-    </Compile>
-    <Compile Include="System\frm_ChangePass.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="System\frm_ChangePass.Designer.cs">
-      <DependentUpon>frm_ChangePass.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Helper\HttpHelper.cs" />
+    <Compile Include="Helper\ReadWriteINIfile.cs" />
+    <Compile Include="Helper\WaitFormFunc.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -115,26 +115,49 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ReadWriteINIfile.cs" />
+    <Compile Include="SystemERP\frmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SystemERP\frmLogin.Designer.cs">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SystemERP\frm_ChangePass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SystemERP\frm_ChangePass.Designer.cs">
+      <DependentUpon>frm_ChangePass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SystemERP\frm_Waiting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SystemERP\frm_Waiting.Designer.cs">
+      <DependentUpon>frm_Waiting.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="EPR\ENT\frmENT_Order.resx">
+      <DependentUpon>frmENT_Order.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EPR\frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EPR\List\frmLST_Product.resx">
       <DependentUpon>frmLST_Product.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EPR\List\frmLST_Product_Input.resx">
       <DependentUpon>frmLST_Product_Input.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="System\frmLogin.resx">
-      <DependentUpon>frmLogin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmMain.resx">
-      <DependentUpon>frmMain.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="System\frm_ChangePass.resx">
-      <DependentUpon>frm_ChangePass.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SystemERP\frmLogin.resx">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SystemERP\frm_ChangePass.resx">
+      <DependentUpon>frm_ChangePass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SystemERP\frm_Waiting.resx">
+      <DependentUpon>frm_Waiting.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="AppConfig.INI">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -179,6 +202,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\excel1.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\waiting_icon.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
